force-app/main/default/objects/Account/fields/Billed_amount__c.field-meta.xml
<CustomField>
    <fullName>Billed_amount__c</fullName>
    <label>Billed amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>