force-app/main/default/objects/Account/fields/City_State_Zipcode_1__c.field-meta.xml
<CustomField>
    <fullName>City_State_Zipcode_1__c</fullName>
    <label>City/State/Zipcode 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>