force-app/main/default/objects/Account/fields/City_State_Zipcode_2__c.field-meta.xml
<CustomField>
    <fullName>City_State_Zipcode_2__c</fullName>
    <label>City/State/Zipcode 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>