force-app/main/default/objects/Account/fields/Entity_DBA__c.field-meta.xml
<CustomField>
    <fullName>Entity_DBA__c</fullName>
    <label>Entity DBA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>