force-app/main/default/objects/Account/fields/Entity_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Entity_ID_2__c</fullName>
    <label>Entity ID 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>