force-app/main/default/objects/Account/fields/Entity_ID_3__c.field-meta.xml
<CustomField>
    <fullName>Entity_ID_3__c</fullName>
    <label>Entity ID 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>