force-app/main/default/objects/Account/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Provider</fullName>
            </value>
            <value>
                <fullName>Rendering Provider</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
                <isActive>false</isActive>
                <label>Claims</label>
            </value>
            <value>
                <fullName>Member</fullName>
                <isActive>false</isActive>
                <label>Member</label>
            </value>
            <value>
                <fullName>Provider</fullName>
                <isActive>false</isActive>
                <label>Provider</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>