force-app/main/default/objects/Account/fields/FEIN_EIN__c.field-meta.xml
<CustomField>
    <fullName>FEIN_EIN__c</fullName>
    <label>FEIN/EIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>