force-app/main/default/objects/Account/fields/Home_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone_Number__c</fullName>
    <label>Home Phone Number</label>
    <type>Phone</type>
</CustomField>