force-app/main/default/objects/Account/fields/Medicaid_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Provider_ID__c</fullName>
    <label>Medicaid Provider ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>