force-app/main/default/objects/Account/fields/Medical_Record_No__c.field-meta.xml
<CustomField>
    <fullName>Medical_Record_No__c</fullName>
    <label>Medical Record No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>