force-app/main/default/objects/Account/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A member associated to this claim.</inlineHelpText>
    <label>Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims (Member)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>