force-app/main/default/objects/Account/fields/National_Identifier__c.field-meta.xml
<CustomField>
    <fullName>National_Identifier__c</fullName>
    <label>National Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>