force-app/main/default/objects/Account/fields/Provider_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Provider_Address_1__c</fullName>
    <label>Provider Address 1</label>
    <type>TextArea</type>
</CustomField>