force-app/main/default/objects/Account/fields/Provider_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Provider_Address_2__c</fullName>
    <label>Provider Address 2</label>
    <type>TextArea</type>
</CustomField>