force-app/main/default/objects/Account/fields/Provider_DBA__c.field-meta.xml
<CustomField>
    <fullName>Provider_DBA__c</fullName>
    <label>Provider DBA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>