force-app/main/default/objects/Account/fields/Provider_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Provider_Email_Address__c</fullName>
    <label>Provider Email Address</label>
    <type>Email</type>
</CustomField>