force-app/main/default/objects/Account/fields/Provider_FEIN_EIN__c.field-meta.xml
<CustomField>
    <fullName>Provider_FEIN_EIN__c</fullName>
    <label>Provider FEIN/EIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>