force-app/main/default/objects/Account/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <label>Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Hospital</fullName>
            </value>
            <value>
                <fullName>Inpatient Psychiatric Hospital</fullName>
            </value>
            <value>
                <fullName>Residential Psychiatric Treatment Center</fullName>
            </value>
            <value>
                <fullName>Comprehensive Outpatient Rehab Facility</fullName>
            </value>
            <value>
                <fullName>Tribal Hospital</fullName>
            </value>
            <value>
                <fullName>Tribal Clinic</fullName>
            </value>
            <value>
                <fullName>SNF/ICF Facility</fullName>
            </value>
            <value>
                <fullName>ICF Facility</fullName>
            </value>
            <value>
                <fullName>Physician (MD)</fullName>
            </value>
            <value>
                <fullName>Health Professional Group</fullName>
            </value>
            <value>
                <fullName>Chiropractor</fullName>
            </value>
            <value>
                <fullName>Intermed Care Facility Mentally Retarded</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Physician Assistant</fullName>
            </value>
            <value>
                <fullName>Advanced Practice Registered Nurse</fullName>
            </value>
            <value>
                <fullName>Optometrist</fullName>
            </value>
            <value>
                <fullName>Podiatrist</fullName>
            </value>
            <value>
                <fullName>Physical Therapist</fullName>
            </value>
            <value>
                <fullName>Speech Therapist / Language Pathologist</fullName>
            </value>
            <value>
                <fullName>Occupational Therapist</fullName>
            </value>
            <value>
                <fullName>Psychologist</fullName>
            </value>
            <value>
                <fullName>Audiologist</fullName>
            </value>
            <value>
                <fullName>Hearing Aid Supplier</fullName>
            </value>
            <value>
                <fullName>Outpatient Occ, Speech, and PT center</fullName>
            </value>
            <value>
                <fullName>Direct Entry Midwife</fullName>
            </value>
            <value>
                <fullName>Home Community Based Agency</fullName>
            </value>
            <value>
                <fullName>Residential Supported Living Arrangement</fullName>
            </value>
            <value>
                <fullName>Environmental Modifications</fullName>
            </value>
            <value>
                <fullName>School Based Services</fullName>
            </value>
            <value>
                <fullName>Federally Qualified Health Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>