force-app/main/default/objects/Account/fields/Submitted_date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_date__c</fullName>
    <inlineHelpText>Claim submitted date</inlineHelpText>
    <label>Submitted date</label>
    <type>Date</type>
</CustomField>