force-app/main/default/objects/Account/validationRules/Address_1_Required_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_1_Required_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
	ISBLANK( BillingStreet ), 
	ISBLANK( BillingPostalCode ), 
	ISBLANK( BillingCity ), 
	ISBLANK( BillingCountry ) 
	)</errorConditionFormula>
    <errorMessage>Please fill the address 1 details</errorMessage>
</ValidationRule>