force-app/main/default/objects/Account/listViews/My_Claims.listView-meta.xml
<ListView>
    <fullName>My_Claims</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Provider__c</columns>
    <columns>Member__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Billed_amount__c</columns>
    <columns>Paid_Amount__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Claims</value>
    </filters>
    <label>My Claims</label>
</ListView>